--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,36 @@
-# Compiled class file
+/.metadata/
+
+# Java build files
+/target/
 *.class
-
-# Log file
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+*.iml
+
+#test files
+/src/test/java/
+
+# IDE specific files
+# Eclipse / STS
+.project
+.classpath
+.settings/
+.metadata/
+
+# Build tool
+# Maven
+target/
+log/
+dependency-reduced-pom.xml
+build.log
+
+# Ignore node_modules(these can be re-generated with "npm install")
+node_modules/   
+
+# sonarlint
+.sonarlint/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
